GitOps/clusters/cyberhawk-talos-k8s/2-services/monitoring/librenms/20-valkey-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: valkey
          image: valkey/valkey
          ports:
            - containerPort: 6379
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          readinessProbe:
            exec:
              command: [valkey-cli, ping]
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command: [valkey-cli, ping]
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              memory: 128Mi
