GitOps/clusters/cyberhawk-talos-k8s/2-services/monitoring/librenms/33-librenms-dispatcher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librenms-dispatcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librenms
      component: dispatcher
  template:
    metadata:
      labels:
        app: librenms
        component: dispatcher
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: dispatcher
          image: librenms/librenms
          securityContext:
            capabilities:
              add: [NET_ADMIN, NET_RAW]
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: librenms-data
