GitOps/clusters/cyberhawk-talos-k8s/2-services/monitoring/librenms/21-valkey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
spec:
  selector:
    app: valkey
  ports:
    - port: 6379
      targetPort: 6379
