GitOps/clusters/cyberhawk-talos-k8s/2-services/monitoring/librenms/23-rrdcached-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rrdcached
spec:
  selector:
    app: rrdcached
  ports:
    - port: 42217
      targetPort: 42217
