GitOps/clusters/cyberhawk-talos-k8s/2-services/monitoring/librenms/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librenms-server
  annotations:
    # Enable Omni Workload Proxying for this service
    omni-kube-service-exposer.sidero.dev/port: "8000"
    omni-kube-service-exposer.sidero.dev/label: librenms
