GitOps/clusters/cyberhawk-talos-k8s/2-services/monitoring/librenms/40-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: librenms
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - librenms.cyberhawk.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: librenms
          port: 80
